deploy/kubedemo-public-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubedemo-public-service
  labels:
    app: kubedemo-public-service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: kubedemo-public-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubedemo-public-service
  labels:
    app: kubedemo-public-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 25%
  selector:
    matchLabels:
      app: kubedemo-public-service
  template:
    metadata:
      labels:
        app: kubedemo-public-service
    spec:
      containers:
        - name: kubedemo-public-service
          image: codefuller/kubedemo-public-service:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /environment
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /environment
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
